fix height of header to 400px on mobile view

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 520px;
-  padding-top: 120px;
   width: 100%;
   color: white;
   background-color: rgb(234, 146, 13);
@@ -13,4 +11,17 @@
 
 .lastname {
   font-weight: 300;
+}
+
+@media screen and (max-width: 1023px) {
+  .main-header {
+    height: 520px;
+    padding-top: 120px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .main-header {
+    height: 400px;
+  }
 }
